--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,13 +3,13 @@
     <h2>Login</h2>
 
     <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+      <div class="mb-3 form-group">
+        <label for="email-login" class='form-label'>email:</label>
+        <input class="form-control" type="text" id="email-login" />
       </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
+      <div class="form-group mb-3">
+        <label for="password-login" class='form-label'>password:</label>
+        <input class="form-control" type="password" id="password-login" />
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">login</button>
@@ -20,17 +20,17 @@
     <h2>Signup</h2>
 
     <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+      <div class="form-group mb-3">
+        <label for="name-signup" class='form-label'>name:</label>
+        <input class="form-control" type="text" id="name-signup" />
       </div>
-      <div class="form-group">
+      <div class="form-group mb-3">
         <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <input class="form-control" type="text" id="email-signup" />
       </div>
-      <div class="form-group">
+      <div class="form-group mb-3">
         <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <input class="form-control" type="password" id="password-signup" />
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
